--- a/config/training.yaml
+++ b/config/training.yaml
@@ -1,3 +1,32 @@
+# TRAIN:
+#   train_batch_size: 32
+#   lr: 0.0003
+
+#   valid_batch_size: 8
+
+#   image_size: [224,224]
+
+#   min_epochs: 20
+#   max_epochs: 100
+#   patience: 20
+
+#   device: 1
+
+#   model_save_path: ./save_model
+#   model_save_filename: medseg
+
+# MODEL:
+#   bert_type: microsoft/BiomedVLP-CXR-BERT-specialized
+#   vision_type: facebook/convnext-tiny-224
+#   project_dim: 768
+
+# DATA:
+#   train_csv_path: ./data/QaTa-COV19-v2/prompt/train.csv
+#   train_root_path: ./data/QaTa-COV19-v2/Train
+
+#   test_csv_path: ./data/QaTa-COV19-v2/prompt/test.csv
+#   test_root_path: ./data/QaTa-COV19-v2/Test
+
 TRAIN:
   train_batch_size: 32
   lr: 0.0003
@@ -12,17 +41,19 @@ TRAIN:
 
   device: 1
 
-  model_save_path: ./save_model
+  model_save_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/save_model
   model_save_filename: medseg
+
 
 MODEL:
   bert_type: microsoft/BiomedVLP-CXR-BERT-specialized
   vision_type: facebook/convnext-tiny-224
   project_dim: 768
 
-DATA:
-  train_csv_path: ./data/QaTa-COV19-v2/prompt/train.csv
-  train_root_path: ./data/QaTa-COV19-v2/Train
 
-  test_csv_path: ./data/QaTa-COV19-v2/prompt/test.csv
-  test_root_path: ./data/QaTa-COV19-v2/Test
+DATA:
+  train_csv_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/train/Train_text.xlsx
+  train_root_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/train
+
+  valid_csv_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/val/Val_text.xlsx
+  valid_root_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/val
