--- a/config/training.yaml
+++ b/config/training.yaml
@@ -42,7 +42,8 @@ TRAIN:
   device: 1
 
   model_save_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/save_model
-  model_save_filename: medseg
+  # model_save_filename: medseg
+  model_save_filename: medseg_busi
 
 
 MODEL:
@@ -50,6 +51,13 @@ MODEL:
   vision_type: facebook/convnext-tiny-224
   project_dim: 768
 
+
+# DATA:
+#   train_csv_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/train/Train_text.xlsx
+#   train_root_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/train
+
+#   valid_csv_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/val/Val_text.xlsx
+#   valid_root_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/val
 
 DATA:
   train_csv_path: /content/drive/MyDrive/Prashant/research_datasets/Kvasir_80_20_TEXT_NEW/train/Train_text.xlsx
